fixed spacing and line breaks on section 9

--- a/immersive-stories/css/20-for-2020.css
+++ b/immersive-stories/css/20-for-2020.css
@@ -18,3 +18,5 @@
 
 .video-caption p { font-style: italic; }
 
+#flex-content-section-9 .image-caption span { display: block; }
+#flex-content-section-9 .image-caption span:first-of-type { margin-bottom: 20px; }
